httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    app: httpd-app
  ports:
    - port: 80
      targetPort: 80
