svc-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginxapp
  ports:
    - port: 80
      targetPort: 80
